<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.gosu-lang.gosu</groupId>
    <artifactId>gosu-parent</artifactId>
    <version>1-X-SNAPSHOT</version>
    <relativePath>../gosu-parent/pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>gosu-lab</artifactId>

  <name>Gosu :: Lab</name>

  <dependencies>
    <dependency>
      <groupId>org.gosu-lang.gosu</groupId>
      <artifactId>gosu-core-api</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.gosu-lang.gosu</groupId>
      <artifactId>gosu-core</artifactId>
      <version>${project.version}</version>
      <scope>runtime</scope>
    </dependency>

<!--this is for Lucene indexing-->
    <!--<dependency>-->
      <!--<groupId>org.apache.lucene</groupId>-->
      <!--<artifactId>lucene-core</artifactId>-->
      <!--<version>6.2.1</version>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.apache.lucene</groupId>-->
      <!--<artifactId>lucene-queryparser</artifactId>-->
      <!--<version>6.2.1</version>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.apache.lucene</groupId>-->
      <!--<artifactId>lucene-highlighter</artifactId>-->
      <!--<version>6.2.1</version>-->
    <!--</dependency>-->


    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
            <arg>--add-exports=java.base/sun.security.action=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.swing=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.swing.icon=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
